--- a/assets/style/app.sass
+++ b/assets/style/app.sass
@@ -37,3 +37,9 @@ html, body
         padding: 26pt 26pt
 
 
+@media (max-width: 520px)
+  html, body
+    #__nuxt
+      main
+        .content
+          padding: 12pt 12pt
