--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -38,7 +38,7 @@ body {
         flex: 1;
         flex-direction: column;
         padding: 20px;
-        width: 850px;
+        width: 70%;
         box-shadow: 4px 4px 16px $rl-app-grey-300;
 
         .page {
@@ -50,7 +50,7 @@ body {
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 600px) {
   html,
   body {
     #__nuxt {
@@ -59,6 +59,20 @@ body {
 
         .content {
           width: 100%;
+          padding: 12px 12px 80px 12px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 601px) and (max-width: 850px) {
+  html,
+  body {
+    #__nuxt {
+      main {
+        .content {
+          width: 80%;
           padding: 12px 12px 80px 12px;
         }
       }
