--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -23,6 +23,9 @@ $rl-app-brown-700: #8e7b63;
 $rl-app-brown-800: #6e5f4d;
 $rl-app-brown-900: #54493b;
 
+$rl-app-brown-variant-1: rgba(230, 217, 202, 0.5);
+$rl-app-brown-variant-2: rgba(84, 73, 59, 0.5);
+
 /* CORES BÁSICAS E SUAS VARIAÇÕES, #808080, #FFF, #000 */
 $rl-app-grey-50: #f2f2f2;
 $rl-app-grey-100: #d8d8d8;
