--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -18,7 +18,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: $rl-app-white;
+  background-color: $rl-app-brown-50;
   color: $rl-app-blue-500;
   overflow: hidden;
 
