--- a/assets/style/project.scss
+++ b/assets/style/project.scss
@@ -93,8 +93,7 @@
         .zoom-lens {
           position: absolute;
           border-radius: 50%;
-          border: 1px solid $rl-app-black-50;
-          background: $rl-app-black-10;
+          background: $rl-app-white-10;
           pointer-events: none;
         }
       }
