--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -40,6 +40,8 @@ body {
       .content {
         flex: 1;
         flex-direction: column;
+        overflow-x: hidden;
+        overflow-y: auto;
         padding: 20px;
         width: 70%;
         box-shadow: 4px 4px 16px $rl-app-grey-300;
