--- a/assets/style/projects.scss
+++ b/assets/style/projects.scss
@@ -108,6 +108,7 @@
           height: 100%;
           justify-content: center;
           align-items: center;
+          padding: 20px 0;
 
           img {
             width: auto;
@@ -206,12 +207,25 @@
       }
     }
 
-    .sub-header {
+    .carousel-techs {
       display: flex;
-      justify-content: start;
-      align-items: center;
-      gap: 4px;
-      padding: 4px 0;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      gap: 10px;
+      padding: 10px 0;
+      min-height: 40px;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+      cursor: grab;
+      user-select: none;
+
+      &:active {
+        cursor: grabbing;
+      }
+
+      .slide-techs {
+        scroll-snap-align: start !important;
+      }
     }
 
     .text-resume {
@@ -256,11 +270,22 @@
           border-radius: 4px 4px 0 0;
         }
       }
+
+      .slider {
+        .slides {
+          .prev, .next {
+            padding: 20px 0;
+          }
+          .active {
+            padding: 10px 0;
+          }
+        }
+      }
     }
 
     .resume-project {
       width: 100%;
-      max-height: 180px;
+      max-height: 200px;
       border-radius: 0 0 4px 4px;
 
       .header {
@@ -269,5 +294,8 @@
         }
       }
     }
+  }
+  .text-more-projects-after {
+    font-size: $rl-app-desktop-fs-sm;
   }
 }
