--- a/assets/style/utilities.scss
+++ b/assets/style/utilities.scss
@@ -189,6 +189,221 @@ section {
   margin-top: 20px;
 }
 
+.col-4 {
+  width: 33%;
+}
+
+.form-filters {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  gap: 12px;
+
+  .form-filter {
+    position: relative;
+
+    .form-input {
+      position: relative;
+      width: 100%;
+      min-height: 40px;
+      padding: 8px 16px;
+      border-radius: $rl-app-desktop-br-sm;
+      font-size: $rl-app-desktop-fs-sm;
+      outline: none;
+      border: 1px solid transparent;
+      transition: all 250ms ease-in-out;
+      box-shadow: 2px 2px 4px $rl-app-blue-50;
+
+      &:focus {
+        border: 1px solid $rl-app-blue-100;
+        box-shadow: 3px 3px 6px $rl-app-blue-100;
+      }
+    }
+
+    .dropdown-container {
+      position: relative;
+      background-color: $rl-app-white;
+      border-radius: $rl-app-desktop-br-sm;
+
+      .input-box {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        border-radius: $rl-app-desktop-br-sm;
+        outline: none;
+        border: 1px solid transparent;
+        transition: all 250ms ease-in-out;
+        box-shadow: 2px 2px 4px $rl-app-blue-50;
+
+        input {
+          text-transform: uppercase;
+          transition: all 250ms ease-in-out;
+          width: 100%;
+          min-height: 40px;
+          border-radius: $rl-app-desktop-br-sm;
+          font-size: $rl-app-desktop-fs-sm;
+          border: none;
+          outline: none;
+          padding: 8px 35px 8px 16px;
+
+          &:focus {
+            border: 1px solid $rl-app-blue-100;
+            box-shadow: 3px 3px 6px $rl-app-blue-100;
+          }
+        }
+
+        .clear-all {
+          cursor: pointer;
+          right: 10px;
+          top: 50%;
+          transform: translateY(-50%);
+          position: absolute;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          font-size: $rl-app-desktop-fs-md;
+          background-color: $rl-app-blue-500;
+          color: $rl-app-brown-500;
+        }
+      }
+
+      .dropdown {
+        position: absolute;
+        flex-direction: column;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background-color: $rl-app-white;
+        border: 1px solid #ccc;
+        border-radius: $rl-app-desktop-br-sm;
+        margin-top: 4px;
+        max-height: 200px;
+        overflow-y: auto;
+        z-index: 10;
+        padding: 0;
+        list-style: none;
+
+        li {
+          .option {
+            padding: 8px 16px;
+            cursor: pointer;
+            transition: background 0.3s;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: $rl-app-desktop-fs-sm;
+
+            .remove {
+              display: none;
+            }
+
+            &:hover {
+              background-color: $rl-app-white-50;
+            }
+
+            &.selected {
+              background-color: $rl-app-blue-500;
+              color: $rl-app-brown-500;
+
+              .remove {
+                display: block;
+                font-size: $rl-app-desktop-fs-sm;
+              }
+            }
+
+            &.searched {
+              background-color: $rl-app-brown-200;
+
+              &:hover {
+                background-color: $rl-app-brown-500;
+                color: $rl-app-brown-50;
+              }
+            }
+          }
+
+          .select-group {
+            .title-group {
+              color: $rl-app-brown-500;
+              padding: 8px 16px;
+              text-transform: uppercase;
+              font-size: $rl-app-desktop-fs-xxs;
+              font-weight: bold;
+            }
+
+            .option-group {
+              padding: 8px 16px;
+              cursor: pointer;
+              transition: background 0.3s;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              font-size: $rl-app-desktop-fs-sm;
+
+              .remove {
+                display: none;
+              }
+
+              &:hover {
+                background-color: $rl-app-white-50;
+              }
+
+              &.selected {
+                background-color: $rl-app-blue-500;
+                color: $rl-app-brown-500;
+
+                .remove {
+                  display: block;
+                  font-size: $rl-app-desktop-fs-sm;
+                }
+              }
+
+              &.searched {
+                background-color: $rl-app-brown-200;
+
+                &:hover {
+                  background-color: $rl-app-brown-500;
+                  color: $rl-app-brown-50;
+                }
+              }
+            }
+          }
+        }
+
+        .not-found-results {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 8px 16px;
+          font-size: $rl-app-desktop-fs-sm;
+        }
+      }
+    }
+  }
+}
+
+.not-found-projects {
+  display: flex;
+  width: 100%;
+  background-color: $rl-app-brown-100;
+  color: $rl-app-blue-500;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  padding: 16px;
+  margin-top: 20px;
+  font-size: $rl-app-desktop-fs-md;
+  font-weight: bold;
+
+  .item-not-found {
+    font-weight: normal;
+    color: $rl-app-blue-400;
+  }
+}
+
 @media (max-width: 600px) {
   .title-section {
     font-size: $rl-app-desktop-fs-xm;
@@ -215,6 +430,58 @@ section {
     border-radius: $rl-app-desktop-br-sm;
     text-transform: uppercase;
     font-size: $rl-app-desktop-fs-xs;
+  }
+
+  .form-filters {
+    flex-direction: column;
+
+    .form-filter {
+      width: 100%;
+
+      .form-input {
+        font-size: $rl-app-desktop-fs-xs;
+      }
+
+      .dropdown-container {
+        .input-box {
+          input {
+            font-size: $rl-app-desktop-fs-xs;
+          }
+        }
+
+        .dropdown {
+          li {
+            .option {
+              font-size: $rl-app-desktop-fs-xs;
+
+              &.selected {
+                .remove {
+                  display: block;
+                  font-size: $rl-app-desktop-fs-xs;
+                }
+              }
+            }
+
+            .select-group {
+              .option-group {
+                font-size: $rl-app-desktop-fs-xs;
+
+                &.selected {
+                  .remove {
+                    display: block;
+                    font-size: $rl-app-desktop-fs-xs;
+                  }
+                }
+              }
+            }
+          }
+
+          .not-found-results {
+            font-size: $rl-app-desktop-fs-xs;
+          }
+        }
+      }
+    }
   }
 }
 
