--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
+  transition: all 300ms ease-in-out;
 
   &::before,
   &::after {
@@ -19,8 +20,8 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: $rl-app-brown-50;
-  color: $rl-app-blue-500;
+  background-color: var(--background-primary-color);
+  color: var(--text-primary-color);
   overflow: hidden;
 
   #__nuxt {
@@ -42,7 +43,7 @@ body {
         flex-direction: column;
         padding: 20px;
         width: 70%;
-        box-shadow: 4px 4px 16px $rl-app-grey-300;
+        box-shadow: 4px 4px 16px var(--box-shadow-color);
 
         .page {
           display: block;
