--- a/assets/style/homepage.scss
+++ b/assets/style/homepage.scss
@@ -25,7 +25,6 @@
     align-items: center;
     gap: 10px;
     position: absolute;
-    color: $rl-app-blue-500;
     top: 15px;
     left: 50%;
     font-weight: 700;
@@ -118,7 +117,8 @@
     .right-side, .left-side {
       &.html-side {
         min-height: 280px;
-        background-color: $rl-app-blue-500;
+        background-color: var(--background-card-primary-color);
+        border: 1px solid var(--border-card-primary-color);
         border-radius: $rl-app-desktop-br-md;
         padding: 15px !important;
         display: flex;
@@ -138,7 +138,7 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              border: 1px solid $rl-app-blue-200;
+              border: 1px solid var(--border-card-mini-primary-color);
               height: 60px;
               min-width: 60px;
               transition: all 350ms ease-in-out;
@@ -147,8 +147,7 @@
               border-radius: $rl-app-desktop-br-md;
 
               &:hover {
-                background-color: $rl-app-blue-900;
-                border-color: $rl-app-blue-50;
+                background-color: var(--background-card-primary-color-hover);
               }
             }
           }
@@ -160,7 +159,7 @@
             gap: 10px;
 
             .links-title {
-              color: $rl-app-blue-50;
+              color: var(--text-primary-color);
               display: flex;
               justify-content: start;
               align-items: center;
@@ -170,16 +169,16 @@
               .divisor {
                 width: 100%;
                 height: 1px;
-                background-color: $rl-app-blue-50;
+                background-color: var(--text-primary-color);
               }
             }
 
             .resume-link {
-              color: $rl-app-blue-100;
+              color: var(--text-primary-color);
               transition: color 350ms ease-in-out;
 
               &:hover {
-                color: $rl-app-white;
+                color: var(--text-primary-color-hover);
               }
             }
           }
@@ -293,7 +292,6 @@
               }
 
               .resume-link {
-                color: $rl-app-blue-100;
                 transition: color 350ms ease-in-out;
 
                 &:hover {
@@ -313,7 +311,7 @@
     border-right: 1px solid $rl-app-blue-500;
     border-bottom: 1px solid $rl-app-blue-500;
     margin-top: 20px;
-    background-color: $rl-app-blue-50;
+    background-color: var(--background-card-tech-primary-color);
 
     &:first-child {
       margin-top: 0;
