--- a/assets/style/projects.scss
+++ b/assets/style/projects.scss
@@ -7,7 +7,6 @@
   align-items: center;
   width: 100%;
   border: 1px solid $rl-app-blue-50;
-  color: $rl-app-blue-500;
   font-weight: bold;
   border-radius: $rl-app-desktop-br-sm;
   padding: 20px 0;
@@ -18,7 +17,7 @@
   width: 100%;
   height: 250px;
   border-radius: 4px;
-  box-shadow: 0 4px 8px $rl-app-black-10;
+  box-shadow: 0 4px 8px var(--box-shadow-color);
   transition: all 0.2s ease-in;
 
   &:not(:first-child) {
@@ -181,7 +180,7 @@
     flex-direction: column;
     width: 50%;
     height: 100%;
-    background-color: $rl-app-white;
+    background-color: var(--background-card-primary-color);
     border-radius: 0 4px 4px 0;
     padding: 16px;
     transition: all 0.2s ease-in;
@@ -241,7 +240,7 @@
     cursor: pointer;
 
     .resume-project {
-      background-color: $rl-app-black-10;
+      background-color: var(--background-card-primary-color-hover);
     }
   }
 }
