--- a/assets/style/project.scss
+++ b/assets/style/project.scss
@@ -333,7 +333,7 @@
         font-size: $rl-app-desktop-fs-xm;
         font-weight: bold;
         display: block;
-        text-decoration: underline;
+        text-transform: uppercase;
       }
 
       .card-body {
@@ -378,7 +378,6 @@
             position: relative;
 
             img {
-              width: 100%;
               height: 100%;
               box-shadow: 0 4px 4px $rl-app-black-50;
               border-radius: $rl-app-desktop-br-sm;
