--- a/assets/style/projects.scss
+++ b/assets/style/projects.scss
@@ -40,10 +40,12 @@
       bottom: 0;
       position: absolute;
       border-radius: 4px 0 0 4px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
       .background-image {
         position: relative;
-        width: 100%;
         height: 100%;
         border-radius: 4px 0 0 4px;
       }
@@ -110,8 +112,11 @@
           padding: 20px 0;
 
           img {
-            width: auto;
             max-height: 100%;
+
+            &.mobile {
+              width: auto !important;
+            }
           }
         }
 
