--- a/assets/style/homepage.scss
+++ b/assets/style/homepage.scss
@@ -39,6 +39,38 @@
   }
 }
 
+.stack-current {
+  width: 100%;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+
+  .tech-stack {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    width: 110px;
+    background-color: var(--background-card-primary-color);
+    padding: 10px 0;
+    border-radius: $rl-app-desktop-br-sm;
+
+    span {
+      font-size: $rl-app-desktop-fs-sm;
+      font-weight: bold;
+    }
+
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+
 .trajectory {
   width: 100%;
   display: flex;
