--- a/assets/style/project.scss
+++ b/assets/style/project.scss
@@ -548,6 +548,46 @@
   }
 }
 
+.component-text-with-image {
+  .text {
+    margin-bottom: 15px;
+  }
+
+  .content-image {
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.component-text-with-video {
+
+  &:not(:first-child) {
+    margin-top: 20px;
+  }
+
+  .text {
+    margin-bottom: 15px;
+  }
+
+  .content-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 .form-comment {
   position: relative;
   display: flex;
