--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "utilities";
+@use "variables" as *;
+@use "utilities" as *;
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Fira+Code:wght@300..700&display=swap");
 
