--- a/assets/style/homepage.scss
+++ b/assets/style/homepage.scss
@@ -58,6 +58,7 @@
     background-color: var(--background-card-primary-color);
     padding: 10px 0;
     border-radius: $rl-app-desktop-br-sm;
+    flex-grow: 1;
 
     span {
       font-size: $rl-app-desktop-fs-sm;
@@ -150,7 +151,6 @@
       &.html-side {
         min-height: 280px;
         background-color: var(--background-card-primary-color);
-        border: 1px solid var(--border-card-primary-color);
         border-radius: $rl-app-desktop-br-md;
         padding: 15px !important;
         display: flex;
@@ -222,34 +222,40 @@
 
 @media (max-width: 600px) {
   .trajectory {
-    gap: 12px;
+    gap: 45px;
     margin-top: 20px;
-    margin-bottom: 35px;
-    padding-left: 20px;
+    margin-bottom: 0;
 
     .trail {
-      left: 6px;
-      width: 6px;
+      left: 0;
+      width: 0;
       transform: none;
+      display: none;
     }
 
     .item-trajectory {
       gap: 4px;
-      padding: 12px 0;
+      padding: 20px 0;
       flex-direction: column;
-      border-bottom: 2px solid $rl-app-brown-200;
-      border-top: 2px solid $rl-app-brown-200;
+      width: 100%;
 
       &:nth-child(odd) {
         flex-direction: column-reverse;
       }
 
-      .pointer-time, .pointer-end {
-        left: -25px;
-        transform: none;
-        width: 35px;
+      &:last-child {
+        padding-bottom: 10px !important;
+      }
+
+      .pointer-end {
+        display: none;
+      }
+
+      .pointer-time {
+        width: 100%;
         height: 35px;
-        font-size: $rl-app-desktop-fs-sm;
+        font-size: $rl-app-desktop-fs-xm;
+        border-radius: $rl-app-desktop-br-sm;
       }
 
       .pointer-time {
@@ -258,10 +264,6 @@
         &.first-pointer {
           top: -15px !important;
         }
-      }
-
-      .pointer-end {
-        bottom: -24px;
       }
 
       .left-side {
@@ -275,35 +277,29 @@
       .right-side, .left-side {
         width: 100% !important;
         max-width: 100% !important;
-        font-size: $rl-app-desktop-fs-sm;
+        font-size: $rl-app-desktop-fs-md;
 
         &.html-side {
           min-height: 150px;
           padding: 8px !important;
           width: 100%;
-          display: flex !important;
-          justify-content: space-between;
-          align-items: center;
-          flex-direction: row;
-          border-radius: $rl-app-desktop-br-sm;
           gap: 4px;
 
           .resume-year {
             height: 100%;
-
-            &:first-child {
-              width: 65%;
-            }
+            width: 95%;
 
             .resume-images {
-              margin-bottom: 0;
-              gap: 4px;
+              margin-bottom: 4px;
+              flex-wrap: nowrap;
+              overflow-x: auto;
+              justify-content: space-between;
 
               .resume-image {
-                height: 25px;
-                width: 25px;
+                height: 50px;
+                width: 50px;
                 min-width: auto !important;
-                padding: 2px;
+                padding: 4px;
                 border-radius: $rl-app-desktop-br-sm;
                 border-width: 0.5px;
               }
@@ -311,8 +307,6 @@
 
             .resume-links {
               gap: 8px;
-              border-left: 1px solid $rl-app-blue-50;
-              padding-left: 6px;
 
               .links-title {
                 font-size: $rl-app-desktop-fs-sm;
@@ -361,6 +355,25 @@
 
       .divisor {
         background-color: $rl-app-blue-500;
+      }
+    }
+  }
+
+  .stack-current {
+    gap: 10px;
+
+    .tech-stack {
+      gap: 8px;
+      width: 100px;
+
+      span {
+        font-size: $rl-app-desktop-fs-xs;
+        font-weight: bold;
+      }
+
+      img {
+        width: 30px;
+        height: 30px;
       }
     }
   }
