--- a/assets/style/project.scss
+++ b/assets/style/project.scss
@@ -1209,12 +1209,17 @@
 
           .image-card {
             width: 100%;
+            height: 100%;
+            max-height: 255px;
 
             .image {
               position: relative;
+              height: 100%;
 
               img {
-                width: 100%;
+                height: 100%;
+                max-height: 255px;
+                width: auto !important;
                 box-shadow: 0 4px 4px $rl-app-black-50;
                 border-radius: $rl-app-desktop-br-sm;
               }
@@ -1313,3 +1318,16 @@
     }
   }
 }
+
+//slide-card-resume .card-list .card-resume .card-body .image-card .image[data-v-0e2aa1cf] {
+//  height: 100%;
+//}
+//.slide-card-resume .card-list .card-resume .card-body .image-card[data-v-0e2aa1cf] {
+//  height: 100%;
+//  max-height: 255px;
+//}
+//.slide-card-resume .card-list .card-resume .card-body .image-card .image img[data-v-0e2aa1cf] {
+//  height: 100%;
+//  max-height: 255px;
+//  width: auto !important;
+//}
