--- a/assets/style/utilities.scss
+++ b/assets/style/utilities.scss
@@ -203,6 +203,13 @@ section {
 }
 
 /* OTHERS */
+
+.text-spacing-1 {
+  font-weight: 300;
+  line-height: 24px;
+  word-spacing: 4px;
+}
+
 .app-mt-2 {
   margin-top: 20px;
 }
